--- a/web/src/Settings.css
+++ b/web/src/Settings.css
@@ -121,7 +121,7 @@ button[type='submit']:active {
   padding-top: 3.5rem;
 }
 
-.exit-toast {
+.toast {
   position: fixed;
   bottom: 2rem;
   left: 50%;
